--- a/index.html
+++ b/index.html
@@ -1,215 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+    @font-face {
+      font-family: 'Snap ITC';
+      src: local('Snap ITC');
     }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Bahnschrift', sans-serif;
+      background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+    }
+
     header {
-      background-color: black;
-      color: white;
-      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
+
     .logo {
+      font-size: 32px;
+      font-family: 'Snap ITC';
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
+    }
+
+    .nav-right {
       display: flex;
       align-items: center;
-    }
-    .logo img {
-      width: 50px;
-      height: 50px;
-    }
-    .logo span {
-      font-size: 14px;
-      margin-left: 5px;
-    }
-    .search-bar {
-      flex: 1;
-      margin: 0 20px;
-    }
-    .search-bar input {
-      width: 100%;
-      padding: 8px;
-    }
-    .menu-buttons button {
-      margin-left: 10px;
-      padding: 8px 12px;
-      background-color: red;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      padding: 20px;
     }
-    .product-card {
-      background-color: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: 0.3s;
-    }
-    .product-card img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-    .product-card .info {
-      padding: 15px;
-    }
-    .product-card h3 {
-      margin: 0 0 10px 0;
-    }
-    .product-card p {
-      font-size: 14px;
-      color: #555;
-    }
-    .product-card .price {
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
       font-weight: bold;
+    }
+
+    .nav-links a:hover {
+      color: #ff6b6b;
+    }
+
+    .search-filter {
+      text-align: center;
+      margin: 20px auto 5px;
+    }
+
+    .search-filter input[type="text"] {
+      padding: 8px;
+      width: 300px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .category-bar {
+      text-align: center;
       margin: 10px 0;
     }
-    .product-card button {
-      background-color: black;
-      color: white;
-      padding: 10px;
-      border: none;
+
+    .category-bar span {
+      color: black;
+      background: rgba(255,255,255,0.8);
+      padding: 5px 15px;
+      margin: 0 5px;
+      border-radius: 5px;
       cursor: pointer;
-      width: 100%;
+      font-weight: bold;
     }
-    /* Popup Login */
-    .login-popup {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.6);
-      display: none;
-      justify-content: center;
-      align-items: center;
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px 40px;
+      background: rgba(0,0,0,0.4);
     }
-    .login-popup-content {
-      background-color: white;
-      padding: 30px;
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      padding: 40px;
+      background: rgba(0,0,0,0.3);
+    }
+
+    .product {
+      background: rgba(255,255,255,0.85);
+      color: #000;
       border-radius: 10px;
-      position: relative;
-      width: 300px;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-      font-size: 18px;
-      color: red;
+
+    .product:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
     }
-    .login-popup input {
+
+    .product img {
       width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+
+    .product-info {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .product-info h3 {
       margin-bottom: 10px;
-      padding: 8px;
+    }
+
+    .buy-btn {
+      background-color: #e63946;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .buy-btn:hover {
+      background-color: #d90429;
+    }
+
+    #about-content {
+      padding: 20px;
+      margin-top: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      color: black;
+      display: none;
+    }
+
+    footer {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    #loginPopup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.95);
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #000;
+    }
+
+    #loginPopup input {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+    }
+
+    #loginPopup button {
+      background: #e63946;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">
-      <img src="https://via.placeholder.com/50" alt="FA-Tshirt Logo">
-      <span>FA-Tshirt</span>
-    </div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search for products">
-    </div>
-    <div class="menu-buttons">
-      <button onclick="showLoginPopup()">Login</button>
-      <button>Cart</button>
+    <div class="logo">FA-Tshirt</div>
+    <div class="nav-right">
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about" onclick="showAbout()">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <a href="#" onclick="showLogin()" style="color:white">Login</a>
+      <a href="#" style="color:white">Cart</a>
     </div>
   </header>
 
-  <div class="products" id="product-list">
-    <!-- Product Cards -->
+  <div class="search-filter">
+    <input type="text" placeholder="Search for t-shirts...">
   </div>
 
-  <div class="login-popup" id="loginPopup">
-    <div class="login-popup-content">
-      <span class="close-btn" onclick="hideLoginPopup()">&times;</span>
-      <h3>Login</h3>
-      <input type="email" placeholder="Email">
-      <input type="password" placeholder="Password">
-      <button>Login</button>
+  <div class="category-bar">
+    <span>Men</span>
+    <span>Women</span>
+    <span>Kids</span>
+  </div>
+
+  <section class="hero" id="home">
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Trendy | Comfortable | Affordable</p>
+  </section>
+
+  <section class="products" id="products">
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+  </section>
+
+  <section id="about-content">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 FA-Tshirt. All rights reserved.
+  </footer>
+
+  <div id="loginPopup">
+    <h2>Login</h2>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button onclick="alert('Login Successful')">Login</button>
   </div>
 
   <script>
-    const products = [
-      {
-        img: 'https://www.dropbox.com/scl/fi/qg23nbgt17v3c1fjmz9yd/Top-Fashionista-__-Striped-Off-Shoulder-Tops-for-Nautical-Chic.jfif?rlkey=bpy2gearchgh7q2qqn9wnb1jo&st=p9p146yu&raw=1',
-        title: 'Striped Off Shoulder Top',
-        desc: 'Perfect for a nautical chic look.',
-        price: '₹499'
-      },
-      {
-        img: 'https://www.dropbox.com/scl/fi/jtsaogqxtxzg5llso50j2/Vintage-Vertical-Painting-Over-Fit-T-Shirt.jfif?rlkey=if3qhrugq8p04uoawamc3uovl&st=m8mq4vyv&raw=1',
-        title: 'Vintage Vertical T-Shirt',
-        desc: 'Unique overfit t-shirt with art design.',
-        price: '₹599'
-      },
-      {
-        img: 'https://www.dropbox.com/scl/fi/uuigb0k9n6514zebl6h35/Women-s-Men-s-Clothing-Shop-Online-Fashion.jfif?rlkey=mlq1ccpq251z26z3c3ka0tp4r&st=7g4kuarg&raw=1',
-        title: 'Unisex Fashion Tee',
-        desc: 'Trendy design for both men and women.',
-        price: '₹699'
-      },
-      {
-        img: 'https://www.dropbox.com/scl/fi/8imuntoe8pyurqcsjt16b/Oversized-T-Shirt-Short-Sleeve-Cotton-T-Shirt-In-Black.jfif?rlkey=55r3q8jh0u0qz1p3csz4o3sqo&st=ol0muq1p&raw=1',
-        title: 'Oversized Black Cotton Tee',
-        desc: 'Short sleeve and super comfy.',
-        price: '₹449'
-      },
-      {
-        img: 'https://www.dropbox.com/scl/fi/kbelphqsfmkatwno9zzbk/_Ultimate-Style_-Men-s-Best-Outfits-with-Drop-Shoulders_-_Drop-Shoulders-Delight_-Men-s-Best-Outfits.jfif?rlkey=vs6x7vfq3a3fm0iseultaobzg&st=ll2cy9mz&raw=1',
-        title: 'Drop Shoulder Men's Tee',
-        desc: 'Stylish drop shoulder design.',
-        price: '₹549'
-      },
-      {
-        img: 'https://www.dropbox.com/scl/fi/w35xp71onk4s5p9hqq40w/Oversized-Drop-Shoulder-T-Shirt-Charcoal-Grey-_-XXS.jfif?rlkey=h56tbbgnasz6jdt2b9lsh405j&st=p5mdldad&raw=1',
-        title: 'Charcoal Grey Oversized Tee',
-        desc: 'XXS size, perfect fit with premium fabric.',
-        price: '₹579'
-      }
-    ];
-
-    const productList = document.getElementById('product-list');
-    products.forEach(p => {
-      productList.innerHTML += `
-        <div class="product-card">
-          <img src="${p.img}" alt="${p.title}">
-          <div class="info">
-            <h3>${p.title}</h3>
-            <p>${p.desc}</p>
-            <div class="price">${p.price}</div>
-            <button onclick="alert('Added to Cart: ${p.title}')">Add to Cart</button>
-          </div>
-        </div>
-      `;
-    });
-
-    function showLoginPopup() {
-      document.getElementById('loginPopup').style.display = 'flex';
+    function showAbout() {
+      document.getElementById('about-content').style.display = 'block';
+      window.scrollTo(0, document.getElementById('about-content').offsetTop);
     }
-
-    function hideLoginPopup() {
-      document.getElementById('loginPopup').style.display = 'none';
+    function showLogin() {
+      document.getElementById('loginPopup').style.display = 'block';
     }
   </script>
 </body>
